--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="PrimeDesk login page">
     <meta name="keywords" content="sign in, login">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link type="text/css" href="./fonts/css/all.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="./styles/UdaraX.css">
     <link type="text/css" rel="stylesheet" href="./styles/homepage.css">
     <script type="text/javascript" src="./scripts/utils.js"></script>
@@ -135,7 +136,8 @@
                 </h2>
             </div>
             <div class="action-btn-cont">
-                <a class="ux-btn custom-action-btn ux-bg-chocolate bg-hover ux-txt-white ux-rd-corner-1" href="#">Join Us</a>
+                <a class="ux-btn custom-action-btn ux-bg-chocolate bg-hover ux-txt-white ux-rd-corner-1" href="#">Join
+                    Us</a>
             </div>
         </div>
         <!--animated image indicator-->
@@ -144,6 +146,174 @@
             </div>
             <div id="img-ind-1" class="ux-bg-white ux-f-rd-corner" onclick="gotoImageSlider(1)"></div>
             <div id="img-ind-2" class="ux-bg-white ux-f-rd-corner" onclick="gotoImageSlider(2)"></div>
+        </div>
+    </div>
+
+    <!--About cryptocurrency section-->
+    <div class="about-crypto-section page-cont-max-width">
+        <div class="about-crypto-headline-cont">
+            <h1 class="ux-txt-grayblue">About Cryptocurrency</h1>
+            <div class="about-crypto-headline-underline ux-bg-grayblue"></div>
+        </div>
+        <div class="about-crypto-img-cont">
+            <img src="./images/background/cryptocurrency-2922058_640.jpg" alt="About cryptocurrency image" />
+        </div>
+        <div class="about-crypto-cont">
+            <p>
+                Cryptocurrency are digital asset ... (digital money). They are bit of valuable information
+                which can be transfered among users on a blockchain network. There are thousands of
+                cryptocurrency with different features and bitcoin is the oldest, which was introduced by
+                Satophi Nakemoto in 2008 and it is the most widely accepted crytocurrency.
+            </p>
+        </div>
+    </div>
+
+    <!--About Us section-->
+    <div class="about-us-section page-cont-max-width">
+        <div class="about-us-headline-cont">
+            <h1 class="ux-txt-grayblue">About Us</h1>
+            <div class="about-us-headline-underline ux-bg-grayblue"></div>
+        </div>
+        <div class="about-us-img-cont">
+            <img src="./images/background/computer-3368242_640.jpg" alt="About us image" />
+        </div>
+        <div class="about-us-cont">
+            <p>
+                Cryptopro investment is a financial group that help it client invest their cryptocurrency
+                to make profitable ROI in accordance with the investment package the client subscribe to.
+                We ... to ratify our client and help them on their journey to financial freedom.
+            </p>
+        </div>
+    </div>
+
+    <!--User Testimonial section-->
+    <div class="testimoney-section page-cont-max-width">
+        <div class="testimonial-descr-cont">
+            <h1 class="ux-txt-grayblue">Testimonial Page Section</h1>
+            <p>
+                A testimonial page is one of the most powerful, important parts of your site. 
+                Sure, you can use your homepage to tout your company’s benefits, but it means 
+                a whole lot more when rave reviews come from unbiased customers.
+            </p>
+        </div>
+        <div class="testimonial-panel-cont">
+            <div class="testimonial-panel">
+                <div class="cont">
+                    <img src="./images/background/mimi-thian--VHQ0cw2euA-unsplash.jpg" alt="user's profile picture">
+                    <div>
+                        <p class="ux-fs-px-18">
+                            Hootsuite, which offers a social media dashboard, buckets their testimonials based on goals. 
+                            For example, in one blade, they show testimonials from companies who.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-panel">
+                <div class="cont">
+                    <img src="./images/background/mimi-thian--VHQ0cw2euA-unsplash.jpg" alt="user's profile picture">
+                    <div>
+                        <p class="ux-fs-px-18">
+                            Hootsuite, which offers a social media dashboard, buckets their testimonials based on goals. 
+                            For example, in one blade.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-panel">
+                <div class="cont">
+                    <img src="./images/background/mimi-thian--VHQ0cw2euA-unsplash.jpg" alt="user's profile picture">
+                    <div>
+                        <p class="ux-fs-px-18">
+                            Hootsuite, which offers a social media dashboard, buckets their testimonials based on goals. 
+                            For example, in one blade, they show testimonials from companies who have used social media 
+                            to build their brand.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-panel">
+                <div class="cont">
+                    <img src="./images/background/mimi-thian--VHQ0cw2euA-unsplash.jpg" alt="user's profile picture">
+                    <div>
+                        <p class="ux-fs-px-18">
+                            Hootsuite, which offers a social media dashboard, buckets their testimonials based on goals. 
+                            For example, in one blade, they show testimonials from companies who have used social media.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--page footer section-->
+    <div class="ux-bg-grayblue">
+        <div class="footer-header-cont">
+            <a href="#" class="ux-txt-smokewhite txt-hover">
+                <i class="fas fa-user-cog"></i><span>Admin Sign In</span>
+            </a>
+        </div>
+        <div class="footer-cont">
+            <div class="footer-col_1">
+                <h4>CONTACT US</h4>
+                <ul class="ux-vt-menu fmt-link-med">
+                    <li>
+                        <a href="#" class="link ux-txt-smokewhite txt-hover">
+                            <i class="fas fa-map-marker-alt"></i><span>10A Enugu, Nigeria</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link ux-txt-smokewhite txt-hover">
+                            <!--<i class="fas fa-envelope"></i>-->officialwebsite@gmail.com
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="link ux-txt-smokewhite txt-hover">
+                            <!--<i class="fas fa-phone-square-alt"></i>-->+234 8156654434
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-col_2">
+                <h4>TERMS</h4>
+                <ul class="ux-vt-menu fmt-link-med">
+                    <li>
+                        <a href="#" class="link ux-txt-smokewhite txt-hover">Terms & Condition</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link ux-txt-smokewhite txt-hover">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link ux-txt-smokewhite txt-hover">Terms of Use</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link ux-txt-smokewhite txt-hover">Cookies Statement</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-col_3">
+                <h4>CONNECT WITH US</h4>
+                <ul class="ux-hr-menu">
+                    <li>
+                        <a href="#" class="ux-txt-smokewhite txt-hover">
+                            <i class="fab fa-facebook-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="ux-txt-smokewhite txt-hover">
+                            <i class="fab fa-twitter-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="ux-txt-smokewhite txt-hover">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-hr-line"></div>
+        <div class="footer-base-cont ux-bg-grayblue ux-txt-white">
+            Copyright &copy; WebsiteName 2019. All Rights Reserved
         </div>
     </div>
 </body>
